Improve send hostname via zabbix.

--- a/zabbix/zabbix_agentd.d/nginx.conf
+++ b/zabbix/zabbix_agentd.d/nginx.conf
@@ -1,2 +1,2 @@
 # http://blog.metajiji.tk/2015/05/zabbix-nginx-status.html
-UserParameter=nginx.ping,sh /etc/zabbix/scripts/nginx_status.sh
+UserParameter=nginx.ping[*],sh /etc/zabbix/scripts/nginx_status.sh $1
